--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@vue/cli-plugin-router": "~4.5.17",
     "@vue/cli-plugin-vuex": "~4.5.17",
     "@vue/cli-service": "~4.5.17",
@@ -22,8 +24,15 @@
     "eslint": "^6.8.0",
     "eslint-plugin-html": "^6.1.0",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^7.0.4",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
